design and feriados

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 <body>
 
     <div class="row">
-        <div class="column left" style="background-color:#aaa;">
+        <div class="column left">
             <h2>another calendar</h2>
-            <p>hello</p>
+            <div id="clock"></div>
         </div>
         <div class="column middle"></div>
         <div class="column right"></div>
