--- a/index.html
+++ b/index.html
@@ -14,11 +14,16 @@
 
     <div class="row">
         <div class="column left">
-            <h2>another calendar</h2>
-            <div id="clock"></div>
+            <div id="welcome" class="widget">
+            <h2>Hello, whats your name?</h2>
+            <input type="text" class="name" />
+            </div>
+            <div id="clock" class="widget"></div>
         </div>
+        <nav id="nav-prev" class="column"><</nav>
         <div class="column middle"></div>
         <div class="column right"></div>
+        <nav id="nav-next" class="column">></nav>
     </div>
     <script src="index.js"></script>
 <body>    
