--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <div class="row">
         <div class="column left">
             <div id="welcome" class="widget">
-            <h2>Hello, whats your name?</h2>
-            <input type="text" class="name" />
+            <h2>Hey, whats your name?</h2>
+            <input type="text" name="name" class="name" />
             </div>
             <div id="clock" class="widget"></div>
         </div>
