--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <input type="text" name="name" class="name" />
             </div>
             <div id="clock" class="widget"></div>
+            <div id="sunhours" class="widget"></div>
         </div>
         <nav id="nav-prev" class="column"><</nav>
         <div class="column middle"></div>
