welcome name and data

--- a/index.html
+++ b/index.html
@@ -14,10 +14,7 @@
 
     <div class="row">
         <div class="column left">
-            <div id="welcome" class="widget">
-            <h2>Hey, whats your name?</h2>
-            <input type="text" name="name" class="name" />
-            </div>
+            <div id="welcome" class="widget"></div>
             <div id="clock" class="widget"></div>
             <div id="sunhours" class="widget"></div>
         </div>
