--- a/static/index.html
+++ b/static/index.html
@@ -14,17 +14,9 @@
 </head>
 
 <body>
-
-    <div class="row">
-        <div class="column left">
-            <div id="welcome" class="widget"></div>
-            <div id="clock" class="widget"></div>
-            <div id="sunhours" class="widget"></div>
-        </div>
-        <nav id="nav-prev" class="column"><</nav>
-        <div class="column middle"></div>
-        <div class="column right"></div>
-        <nav id="nav-next" class="column">></nav>
+    <div id="app">
+        <div class="main"></div>
     </div>
+    <script src="layouts.js"></script>
     <script src="index.js"></script>
 <body>    
