--- a/static/index.html
+++ b/static/index.html
@@ -18,6 +18,10 @@
 <body>
     <div id="app">
         <div class="main"></div>
+        <footer>
+            <div id="cont-space" class="blink">Press <span class="space">Space</span> for the next view</div> 
+        </footer>
+        <div class="cont-settings"><i class="material-icons">settings</i></div>
     </div>
     <script src="layouts.js"></script>
     <script src="index.js"></script>
