--- a/static/index.html
+++ b/static/index.html
@@ -19,10 +19,11 @@
     <div id="app">
         <div class="main"></div>
         <footer>
-            <div id="cont-space" class="blink">Press <span class="space">Space</span> for the next view</div> 
+            <div id="cont-space">Press <span class="space blink">Space</span> for the next view</div> 
         </footer>
         <div class="cont-settings"><i class="material-icons">settings</i></div>
     </div>
+    <script src="config.js"></script>
     <script src="layouts.js"></script>
     <script src="index.js"></script>
 <body>    
