--- a/static/index.html
+++ b/static/index.html
@@ -19,11 +19,12 @@
     <div id="app">
         <div class="main"></div>
         <footer>
-            <div class="container-space-bar">Press <span class="container-space-bar__space-bar blink">Space</span> for the next view</div> 
+            <div class="container-space-bar"></div> 
         </footer>
         <div class="container-settings"><i class="material-icons">settings</i></div>
     </div>
     <script src="config.js"></script>
+    <script src="texts.js"></script>
     <script src="layouts.js"></script>
     <script src="index.js"></script>
 <body>    
