--- a/static/index.html
+++ b/static/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>another calendar</title>
+    <title>time tab</title>
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link href="css/style.css" rel="stylesheet" type="text/css" />
     <link href="css/components.css" rel="stylesheet" type="text/css" />
