--- a/static/index.html
+++ b/static/index.html
@@ -24,7 +24,10 @@
         <div class="container-settings-btn"><i class="material-icons container-settings-btn__btn">settings</i></div>
     </div>
     <script src="config.js"></script>
-    <script src="texts.js"></script>
+    <script src="js/texts.js"></script>
+    <script src="init.js"></script>
+    <script src="js/themes.js"></script>
+    <script src="js/phrases.js"></script>
     <script src="layouts.js"></script>
     <script src="index.js"></script>
 <body>    
