--- a/static/index.html
+++ b/static/index.html
@@ -22,6 +22,7 @@
             <div class="container-space-bar"></div> 
         </footer>
         <div class="container-settings-btn"><i class="material-icons container-settings-btn__btn">settings</i></div>
+        <div class="container-photoby">Photo by	&nbsp;<a href="" target="_blank"></a></div>
     </div>
     <script src="config.js"></script>
     <script src="js/texts.js"></script>
