--- a/static/index.html
+++ b/static/index.html
@@ -24,6 +24,9 @@
         <div class="container-settings-btn"><i class="material-icons container-settings-btn__btn">settings</i></div>
         <div class="container-photoby">Photo by	&nbsp;<a href="" target="_blank"></a></div>
     </div>
+    <div id="modal">
+        <div class="modal-content"></div> 
+    </div>
     <script src="config.js"></script>
     <script src="js/texts.js"></script>
     <script src="init.js"></script>
