--- a/static/index.html
+++ b/static/index.html
@@ -11,10 +11,15 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500&family=Open+Sans&display=swap" rel="stylesheet">
     
-    <script src="js/zepto.min.js"></script>
+    <script type="text/javascript" src="js/zepto.min.js"></script>
+    <script type="text/javascript" src="gtm.js"></script>
+    
 </head>
 
 <body>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WWNJLJG" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <div id="app">
         <div class="main"></div>
         <footer>
@@ -31,6 +36,7 @@
     <script src="init.js"></script>
     <script src="js/themes.js"></script>
     <script src="js/phrases.js"></script>
+    <script src="js/tagging.js"></script>
     <script src="layouts.js"></script>
     <script src="index.js"></script>
 <body>    
